<resources>
    <string name="app_name">Fencing Box</string>
    <string name="weapon_foil">FOIL</string>
    <string name="weapon_epee">EPEE</string>
    <string name="weapon_sabre">SABRE</string>
    <string name="rest_period">REST PERIOD</string>
    <string name="priority">PRIORITY</string>
    <string name="mode_spar">SPAR</string>
    <string name="mode_bout">BOUT</string>
    <string name="mode_stopwatch">STOPWATCH</string>
    <string name="mode_weapontest">WEAPON TEST</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_weapon">Weapon</string>
    <string name="weapon_foil_lc">Foil</string>
    <string name="weapon_epee_lc">Epee</string>
    <string name="weapon_sabre_lc">Sabre</string>
    <string name="menu_about">About</string>
    <string name="priority_choose">Choosing priority...</string>
    <string name="piste_select_label">Piste select</string>
    <string name="weapon_select_label">Weapon select</string>
    <string name="demo_on_label">Show demo</string>
    <string name="demo_off_label">Clear demo</string>
    <string name="vibration_off_label">Vibration off</string>
    <string name="vibration_on_label">Vibration on</string>
    <string name="font_normal_label">Normal font</string>
    <string name="font_digital_label">Digital font</string>
    <string name="select_button">Select</string>
    <string name="icon_online_desc">Icon to show online status</string>
    <string name="icon_mute_desc">Icon to show sound mute status</string>
    <string name="piste">Piste</string>
    <string name="b_priority">PRI</string>
    <string name="b_rest">REST</string>
    <string name="b_mode_bout">BOUT</string>
    <string name="b_mode_spar">SPAR</string>
    <string name="b_mode_stopwatch">STOPW</string>
    <string name="b_score_inc">SCORE+</string>
    <string name="b_score_dec">SCORE-</string>
    <string name="b_score_clear">CLR</string>
    <string name="b_score_swap">SWAP</string>
    <string name="b_score_on">SCORE ON</string>
    <string name="b_score_off">SCORE OFF</string>
    <string name="b_fencer_a">FENCER A</string>
    <string name="b_fencer_b">FENCER B</string>
    <string name="b_timer_start">STRT TMR</string>
    <string name="b_timer_stop">STOP TMR</string>
    <string name="b_timer_inc">TMR+</string>
    <string name="b_timer_dec">TMR-</string>
    <string name="b_timer_reset">TMR RST</string>
    <string name="b_confirm">CONFM</string>
    <string name="b_minutes">MINS</string>
    <string name="b_seconds">SECS</string>
    <string name="b_penalty_yellow">PEN YEL</string>
    <string name="b_penalty_red">PEN RED</string>
    <string name="b_penalty_clear">PEN CLR</string>
    <string name="b_passivity">PASS</string>

    <string name="copyright">&#169; Robin Terry 2025</string>
</resources>
